# rust-layeredsec

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  streamciphers.rs  utils.rs
src/unittests/: aes256-ctr-tests.json  testutils.rs  triplesec-v3-tests.json  triplesec-v4-tests.json  twofish256-ctr-tests.json  xchacha20-tests.json  xsalsa20-tests.json
tests/: integration.rs
