[package]
name = "layeredsec"
version = "0.1.0"
authors = ["Joe Jacobs <joe@hazardcell.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A Rust implementation of Keybase's TripleSec and other layered encryption schemes based on it"
repository = "https://github.com/joejacobs/rust-layeredsec"
readme = "README.md"
keywords = ["crypto"]
categories = ["cryptography"]

[dependencies]
aes = "~0.3"
blake2 = "~0.8"
botan = "~0.6"
chacha20 = { version = "~0.2", features = ["xchacha20", "zeroize"] }
ctr = "~0.3"
hmac = "~0.7"
openssl = { version = "~0.10", features = ["vendored"] }
rand = "~0.7"
salsa20 = { version = "~0.3", features = ["xsalsa20", "zeroize"] }
sha2 = "~0.8"
sha3 = "~0.8"
stream-cipher = "~0.3"
subtle = "~2.2"
zeroize = { version = "~0.10", features = ["zeroize_derive"] }

[dev-dependencies]
serde_json = "~1.0"
